deployments/ingress/01_system_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: system-ingress-nginx
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: reverse-proxy
spec:
  # tls:
  # # This assumes tls-secret exists.
  # - secretName: tls-secret
  rules:
  - http:
      paths:
        - path: /system/kibana
          backend:
            serviceName: kibana
            servicePort: 5601
        - path: /system/elasticsearch
          backend:
            serviceName: elasticsearch
            servicePort: 9200
